seperate local/product env